force-app/main/default/objects/OSSJInvokeMetaData__mdt/OSSJInvokeMetaData__mdt.object-meta.xml
<CustomObject>
    <label>OSSJInvokeMetaData</label>
    <pluralLabel>OSSJInvokeMetaDatas</pluralLabel>
</CustomObject>