force-app/main/default/objects/OSSJInvokeMetaData__mdt/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <label>ClassName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>