force-app/main/default/objects/OSSJInvokeMetaData__mdt/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <label>MethodName</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>