force-app/main/default/objects/OSSJInvokeMetaData__mdt/listViews/FieldsView.listView-meta.xml
<ListView>
    <fullName>FieldsView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ClassName__c</columns>
    <columns>MethodName__c</columns>
    <columns>Product_Code__c</columns>
    <columns>OrderType__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>FieldsView</label>
</ListView>